# localstack-lambda-inspector

./: .gitignore  Makefile  README.md  pyproject.toml
localstack_lambda_inspector/: __init__.py  api.py  app.py  extension.py  invocation_log.py  patches.py  ws.py
localstack_lambda_inspector/ui/: server.py  streamlit_app.py
